# open-product-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: ai-integration.md  architecture.md  docker.md  domain-packs.md  feedback.md  importer-guide.md  legal-notes.md  scoring.md  web-ui.md
domains/cars/: domain.yml
domains/generic/: domain.yml
examples/imports/: car_listing.html  cars.csv  cars.json  scrapy_recipe.example.yml
examples/profiles/: family_car.yml
src/open_product_agent/: __init__.py  cli.py  config.py  workflows.py
src/open_product_agent/ai/: __init__.py  base.py  cost_tracker.py  ollama_provider.py  openai_provider.py  prompts.py  providers.py  schemas.py  validator.py
src/open_product_agent/database/: __init__.py  schema.py  store.py
src/open_product_agent/domain_packs/: __init__.py  loader.py
src/open_product_agent/importers/: __init__.py  csv_importer.py  html_importer.py  json_importer.py  normalizer.py  scrapy_importer.py
src/open_product_agent/models/: __init__.py  analysis.py  domain_pack.py  feedback.py  item.py  profile.py  score.py
src/open_product_agent/reports/: markdown.py
src/open_product_agent/scoring/: __init__.py  basic.py
src/open_product_agent/ui/: __init__.py  streamlit_app.py
tests/: test_foundation.py
